# ai-agent-pricatice

./: API.env  README.md  agent.py  main.py  mcp_server.py  pyproject.toml  testmcp.py
chroma_db/: chroma.sqlite3
data/: knowledge.txt
skills/: __init__.py  customer_skill.py  data_analyzer.py  document_processor.py  email_handler.py  logger.py  mcp_weather_skill.py  office_skill.py  schedule_manager.py  task_management.py
